tests/traci/get_variable/MeMeDetector/errors/UnsupportedVariable/testclient_out.traci
TraCITestClient output file. Date: Wed Aug 01 12:33:42 2018


-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <GetVariable>:
  domID=161 varID=255 objID=dummy
.. Answered with error to command (161), [description: Get Multi Entry Exit Detector Variable: unsupported variable 0xff specified]

-> Command sent: <SimulationStep>:
.. Command acknowledged (2), [description: ]

-> Command sent: <Close>:
.. Command acknowledged (127), [description: ]
